<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:elevation="@dimen/margin_m"
              android:background="@color/dark"
              android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light"
        android:padding="@dimen/text_s"
        android:textSize="@dimen/text_m"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_blank_fragment"
        android:id="@+id/textView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light"
        android:padding="@dimen/margin_s"
        android:textSize="@dimen/text_m"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item1"
        android:id="@+id/textView_item1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light"
        android:padding="@dimen/margin_s"
        android:textSize="@dimen/text_m"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item2"
        android:id="@+id/textView_item2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light"
        android:padding="@dimen/margin_s"
        android:textSize="@dimen/text_m"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/item3"
        android:id="@+id/textView_item3"/>


</LinearLayout>